--- a/proxy/templates/login.html
+++ b/proxy/templates/login.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <form action="/api/login" method="POST">
-<input type="text">
+<input type="text" name="key">
 <br>
 <input type="submit">
 </form>
