--- a/proxy/templates/login.html
+++ b/proxy/templates/login.html
@@ -3,7 +3,9 @@
 </head>
 <body>
 <form action="/api/login" method="POST">
-<input type="text" name="key">
+Key: <input type="text" name="key">
+<br>
+Visit: <input type="text" name="url">
 <br>
 <input type="submit">
 </form>
