--- a/proxy/templates/login.html
+++ b/proxy/templates/login.html
@@ -5,6 +5,8 @@
 <form action="/api/login" method="POST">
 Key: <input type="text" name="key">
 <br>
+Device Name: <input type="text" name="device_name">
+<br>
 Visit: <input type="text" name="url">
 <br>
 <input type="submit">
