--- a/proxy/templates/home.html
+++ b/proxy/templates/home.html
@@ -2,8 +2,12 @@
 <head>
 </head>
 <body>
-  <form>
-    <label for="entry" action="/web" method="post">Navigate to https://</label><input id="entry" type="text"></input>
+  <form action="/web/" method="get">
+    <label for="url">Navigate to https://</label><input id="url" type="text"></input>
+    <br>
+  <input id="nocss" type="checkbox"></input><label for="nocss">Disable CSS</label>
+    <br>
+  <input id="noscript" type="checkbox"></input><label for="noscript">Disable Javascript</label>
     <br>
     <input type="submit">
   </form>
