--- a/proxy/templates/home.html
+++ b/proxy/templates/home.html
@@ -3,11 +3,11 @@
 </head>
 <body>
   <form action="/web/" method="get">
-    <label for="url">Navigate to https://</label><input id="url" type="text"></input>
+    <label for="url">Navigate to https://</label><input id="url" name="url" type="text"></input>
     <br>
-  <input id="nocss" type="checkbox"></input><label for="nocss">Disable CSS</label>
+  <input id="nocss" name="nocss" type="checkbox"></input><label for="nocss">Disable CSS</label>
     <br>
-  <input id="noscript" type="checkbox"></input><label for="noscript">Disable Javascript</label>
+  <input id="noscript" name="noscript" type="checkbox"></input><label for="noscript">Disable Javascript</label>
     <br>
     <input type="submit">
   </form>
