--- a/proxy/templates/home.html
+++ b/proxy/templates/home.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   <form action="/web/" method="get">
-    <label for="url">Navigate to https://</label><input id="url" name="url" type="text"></input>
+    <label for="url">Navigate to </label><input id="url" name="url" type="text" value="https://"></input>
     <br>
   <input id="nocss" name="nocss" type="checkbox"></input><label for="nocss">Disable CSS</label>
     <br>
